<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Create Account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_CustName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/CustomerName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/et_CustName"
        app:layout_constraintStart_toStartOf="@+id/et_CustName"
        app:layout_constraintTop_toBottomOf="@+id/et_CustName" />

    <EditText
        android:id="@+id/et_DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/DOB"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/et_EmailAddress"
        app:layout_constraintStart_toStartOf="@+id/et_EmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/et_EmailAddress" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_DOB"
        app:layout_constraintStart_toStartOf="@+id/et_DOB"
        app:layout_constraintTop_toBottomOf="@+id/et_DOB" />

    <EditText
        android:id="@+id/et_ConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/ConfirmPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_DOB"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_DOB"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <Switch
        android:id="@+id/sw_Allergens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:text="@string/Allergens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_ConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/et_ConfirmPassword" />

    <EditText
        android:id="@+id/et_Allergens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Allergens"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_ConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/et_ConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/sw_Allergens" />

</androidx.constraintlayout.widget.ConstraintLayout>